// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query parser and validator with GO field 1`] = `
[
  {
    "id": 0,
    "logicOperator": "AND",
    "queryBits": {
      "go": "0002381",
      "go_evidence": "exp",
    },
    "searchTerm": {
      "id": "gene_ontology",
      "itemType": "sibling_group",
      "label": "Gene Ontology [GO]",
      "siblings": [
        {
          "autoComplete": "/suggester?dict=go&query=?",
          "autoCompleteQueryTerm": "go",
          "dataType": "string",
          "example": "0009986",
          "fieldType": "general",
          "id": "go_field",
          "itemType": "single",
          "term": "go",
        },
        {
          "dataType": "string",
          "evidenceGroups": [
            {
              "groupName": "Any",
              "items": [
                {
                  "code": "any",
                  "name": "Any assertion method",
                },
                {
                  "code": "manual",
                  "name": "Any manual assertion",
                },
                {
                  "code": "automatic",
                  "name": "Any automatic assertion",
                },
              ],
            },
            {
              "groupName": "Manual assertions",
              "items": [
                {
                  "code": "exp",
                  "name": "Inferred from experiment [EXP]",
                },
                {
                  "code": "iba",
                  "name": "Inferred from biological aspect of ancestor [IBA]",
                },
                {
                  "code": "ic",
                  "name": "Inferred by curator [IC]",
                },
                {
                  "code": "ida",
                  "name": "Inferred from direct assay [IDA]",
                },
                {
                  "code": "iep",
                  "name": "Inferred from expression pattern [IEP]",
                },
                {
                  "code": "igc",
                  "name": "Inferred from genomic context [IGC]",
                },
                {
                  "code": "igi",
                  "name": "Inferred from genetic interaction [IGI]",
                },
                {
                  "code": "imp",
                  "name": "Inferred from mutant phenotype [IMP]",
                },
                {
                  "code": "ipi",
                  "name": "Inferred from physical interaction [IPI]",
                },
                {
                  "code": "isa",
                  "name": "Inferred from sequence alignment [ISA]",
                },
                {
                  "code": "ism",
                  "name": "Inferred from sequence mode [ISM]",
                },
                {
                  "code": "iso",
                  "name": "Inferred from sequence orthology [ISO]",
                },
                {
                  "code": "iss",
                  "name": "Inferred from sequence or structural similarity [ISS]",
                },
                {
                  "code": "nas",
                  "name": "Non-traceable author statement [NAS]",
                },
                {
                  "code": "tas",
                  "name": "Traceable author statement [TAS]",
                },
                {
                  "code": "hda",
                  "name": "Inferred from high throughput direct assay [HDA]",
                },
                {
                  "code": "hmp",
                  "name": "Inferred from high throughput mutant phenotype [HMP]",
                },
                {
                  "code": "hgi",
                  "name": "Inferred from high throughput genetic interaction [HGI]",
                },
                {
                  "code": "hep",
                  "name": "Interred from high throughput expression pattern [HEP]",
                },
                {
                  "code": "htp",
                  "name": "Inferred from high throughput experiment [HTP]",
                },
              ],
            },
            {
              "groupName": "Automatic assertions",
              "items": [
                {
                  "code": "iea",
                  "name": "Inferred from electronic annotation [IEA]",
                },
              ],
            },
          ],
          "example": "manual",
          "fieldType": "evidence",
          "id": "go_evidence",
          "itemType": "single",
          "term": "go",
        },
      ],
    },
  },
]
`;

exports[`query parser and validator with autocomplete field 1`] = `
[
  {
    "id": 0,
    "logicOperator": "AND",
    "queryBits": {
      "taxonomy_id": "9606",
    },
    "searchTerm": {
      "autoComplete": "/suggester?dict=taxonomy&query=?",
      "autoCompleteQueryTerm": "taxonomy_id",
      "dataType": "string",
      "example": "human",
      "fieldType": "general",
      "id": "taxonomy_name",
      "itemType": "single",
      "label": "Taxonomy [OC]",
      "term": "taxonomy_name",
    },
  },
]
`;

exports[`query parser and validator with one xref 1`] = `
[
  {
    "id": 0,
    "logicOperator": "AND",
    "queryBits": {
      "xref": "gluco-fructose",
    },
    "searchTerm": {
      "dataType": "string",
      "fieldType": "general",
      "id": "xref_pdb",
      "itemType": "single",
      "label": "PDB",
      "term": "xref",
      "valuePrefix": "pdb-",
    },
  },
]
`;

exports[`query parser and validator with valid and invalid fields 1`] = `
[
  {
    "id": 0,
    "logicOperator": "AND",
    "queryBits": {
      "gene": "ydj1",
    },
    "searchTerm": {
      "dataType": "string",
      "example": "ydj1",
      "fieldType": "general",
      "id": "gene_field",
      "itemType": "single",
      "label": "Gene Name [GN]",
      "term": "gene",
    },
  },
]
`;

exports[`query parser and validator with valid and invalid fields 2`] = `
[
  {
    "id": 1,
    "logicOperator": "AND",
    "queryBits": {
      "invalid": "blahblah",
    },
    "searchTerm": {
      "dataType": "string",
      "fieldType": "general",
      "id": "",
      "itemType": "single",
      "label": "",
      "term": "invalid",
    },
  },
]
`;

exports[`query parser and validator with xrefs, two of which are any 1`] = `
[
  {
    "id": 0,
    "logicOperator": "AND",
    "queryBits": {
      "xref": "gluco-fructose",
    },
    "searchTerm": {
      "dataType": "string",
      "fieldType": "general",
      "id": "xref_pdb",
      "itemType": "single",
      "label": "PDB",
      "term": "xref",
      "valuePrefix": "pdb-",
    },
  },
  {
    "id": 1,
    "logicOperator": "AND",
    "queryBits": {
      "xref": "some value",
    },
    "searchTerm": {
      "dataType": "string",
      "fieldType": "general",
      "id": "xref_embl",
      "itemType": "single",
      "label": "EMBL",
      "term": "xref",
      "valuePrefix": "embl-",
    },
  },
  {
    "id": 2,
    "logicOperator": "AND",
    "queryBits": {
      "xref": "xyz",
    },
    "searchTerm": {
      "dataType": "string",
      "fieldType": "general",
      "id": "xref_any",
      "itemType": "single",
      "label": "Any cross-reference",
      "term": "xref",
    },
  },
  {
    "id": 3,
    "logicOperator": "AND",
    "queryBits": {
      "xref": "xyz-value",
    },
    "searchTerm": {
      "dataType": "string",
      "fieldType": "general",
      "id": "xref_any",
      "itemType": "single",
      "label": "Any cross-reference",
      "term": "xref",
    },
  },
]
`;
